统计数据和帮助Activity传入参数改为游戏类型