@@ -4,8 +4,8 @@ import android.os.Bundle;
 import android.webkit.WebView;
 
 import com.zzy.dicegames.R;
+import com.zzy.dicegames.common.GameType;
 
-import java.util.Arrays;
 import java.util.List;
 
 import androidx.appcompat.app.AppCompatActivity;
@@ -13,63 +13,48 @@ import androidx.appcompat.app.AppCompatActivity;
 /**
  * 用于查看帮助信息的{@code Activity}<br>
  * 传入数据：<br>
- * <ul><li>{@link #GAME_TITLE}: 一个字符串，游戏标题</li></ul>
+ * <ul><li>{@link #KEY_GAME_TYPE}: 游戏类型</li></ul>
  * 返回结果：无
  *
  * @author 赵正阳
  */
 public class HelpActivity extends AppCompatActivity {
-    /** 传入Intent参数：游戏标题 */
-    public static final String GAME_TITLE = "gameTitle";
+    /** 传入参数：游戏类型 */
+    public static final String KEY_GAME_TYPE = "gameType";
 
     /** 支持的语言列表 */
-    private static final List<String> SUPPORTED_LANG = Arrays.asList("zh", "en");
+    private static final List<String> SUPPORTED_LANG = List.of("en", "zh");
 
-    /** 帮助文件名 */
-    private String mFilename;
-
-    /** 用于保存和恢复状态：骰子个数 */
-    private static final String FILENAME = "filename";
+    /** 当前游戏类型 */
+    private GameType mGameType;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_help);
 
-        WebView webView = findViewById(R.id.wvHelp);
-
-        // 注意Intent中的参数不会随系统语言的变化而变化
         if (savedInstanceState == null)
-            mFilename = getFilename(getIntent().getStringExtra(GAME_TITLE));
+            mGameType = (GameType) getIntent().getSerializableExtra(KEY_GAME_TYPE);
         else
-            mFilename = savedInstanceState.getString(FILENAME);
+            mGameType = (GameType) savedInstanceState.getSerializable(KEY_GAME_TYPE);
 
-        String lang = getResources().getConfiguration().getLocales().get(0).getLanguage();
-        if (!SUPPORTED_LANG.contains(lang))
-            lang = "zh";
-
-        webView.loadUrl(String.format("file:///android_asset/help/%s_%s.html", mFilename, lang));
+        loadPage();
     }
 
     @Override
     protected void onSaveInstanceState(Bundle outState) {
-        outState.putString(FILENAME, mFilename);
+        outState.putSerializable(KEY_GAME_TYPE, mGameType);
         super.onSaveInstanceState(outState);
     }
 
-    private String getFilename(String gameTitle) {
-        if (gameTitle.equals(getString(R.string.fiveYahtzee)))
-            return "five_yahtzee";
-        else if (gameTitle.equals(getString(R.string.sixYahtzee)))
-            return "six_yahtzee";
-        else if (gameTitle.equals(getString(R.string.balut)))
-            return "balut";
-        else if (gameTitle.equals(getString(R.string.rollADice)))
-            return "roll_a_dice";
-        else if (gameTitle.equals(getString(R.string.farkle)))
-            return "farkle";
-        else
-            return "";
+    private void loadPage() {
+        String lang = getResources().getConfiguration().getLocales().get(0).getLanguage();
+        if (!SUPPORTED_LANG.contains(lang))
+            lang = SUPPORTED_LANG.get(0);
+
+        WebView webView = findViewById(R.id.wvHelp);
+        String url = String.format("file:///android_asset/help/%s_%s.html", mGameType.name().toLowerCase(), lang);
+        webView.loadUrl(url);
     }
 
 }
